kube_develop/kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: kwetter-development
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - image: docker.pkg.github.com/kwetters6/userservice/userservice
        imagePullPolicy: IfNotPresent
        name: userservice
        ports: 
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      imagePullSecrets:
      - name: github-docker-registry
