kube_develop/kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: kwetter-development
spec:
  selector:
    app: userservice
  ports:
  - port: 80
    targetPort: 80
